@@ -7,6 +7,8 @@ Patches from:
 Moose On The Loose <kensmith1313666@gmail.com>: PRG_STDIN, 20110404
 Patriot: closewindow, 20091027
 Fabio Tranchitella <kobold@debian.org>: Debian 03_stdin, 20080512
+Luca Falavigna <dktrkranz@ubuntu.com>: Debian 02_documentation_paths
 Luca Falavigna <dktrkranz@ubuntu.com>: Debian 01_bashism, 20071220
 Szabo Viktor <wyck@freemail.hu>
 Csaszar-Csutoras Peter <spy@c2.hu>
+
